# QA_Automation_OI

./: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.github/workflows/: lint.yml  tests.yml
pages/: __init__.py  admin_dashboard_page.py  base_page.py  create_post_page.py  login_page.py
secrets_environment/: secrets.py
tests/: test_create_post_page.py  test_login_page.py
