[tool.poetry]
name = "qa-automation-oi"
version = "0.1.0"
description = ""
authors = ["QuirrelForU <symmlux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.1"
pytest = "^8.2.0"
selenium = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="black"
line_length=79
multi_line_output=3
include_trailing_comma=true
skip=[
    "_tmp",
    "src",
    ".env",
    "env",
    "config",
    ".venv",
    "venv",
    "__init__.py",
]

[tool.flake8]
ignore = [
    "D100",
    "D102",
    "D103",
    "D105",
    "D106",
    "D107",
]
exclude = [
    "config",
    ".venv",
    "venv",
    "__init__.py",
]
max-line-length = 79
inline-quotes = "double"
docstring-quotes = "double"
count = true
max-complexity = 10

[tool.black]
line-length=79